--- a/Projet Web Commerce/Views/Panier/Index.cshtml
+++ b/Projet Web Commerce/Views/Panier/Index.cshtml
@@ -25,140 +25,156 @@
         var user = await UserManager.GetUserAsync(User);
         var client = _context.PPClients.Where(p => p.AdresseEmail == user.Email).FirstOrDefault();
 
-    @if (vendeur != null)
-    {
-        <h1>Panier associé à @vendeur.NomAffaires</h1>
-    }
+    <section class="h-100 h-custom">
+        <div class="container py-5 h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-12">
+                    <div class="card card-registration card-registration-2" style="border-radius: 15px;">
+                        <div class="card-body p-0">
+                            <div class="row g-0">
+                                <div class="col-lg-8">
+                                    <div class="p-5">
+                                        <div class="d-flex justify-content-between align-items-center mb-5">
+                                            @if (vendeur != null)
+                                            {
+                                            <h1 class="fw-bold mb-0 text-black">Panier associé à @vendeur.NomAffaires</h1>
+                                            }
+                                            <h6 class="mb-0 text-muted">3 items</h6>
+                                        </div>
+                                        <hr class="my-4">
 
-    <div class="container">
-        <div class="row flex-wrap d-flex">
-            <div class="col-md-6 d-flex">
-                <div class="d-flex flex-wrap align-content-start bg-light overflow-auto  " style="margin-bottom:50px; width:900px; height:600px;">
+                                        
+                                        <div class="row mb-4 d-flex justify-content-between align-items-center">
+                                            <div class="col-md-2 col-lg-2 col-xl-2">
+                                                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-shopping-carts/img5.webp"
+                                                     class="img-fluid rounded-3" alt="Cotton T-shirt">
+                                            </div>
+                                            <div class="col-md-3 col-lg-3 col-xl-3">
+                                                <h6 class="text-muted">Shirt</h6>
+                                                <h6 class="text-black mb-0">Cotton T-shirt</h6>
+                                            </div>
+                                            <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
+                                                <button class="btn btn-link px-2"
+                                                        onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
+                                                    <i class="fas fa-minus"></i>
+                                                </button>
 
-                    @foreach (PPArticlesEnPanier articles in ViewBag.Panier)
-                    {
-                        if (articles.DateCreation < datePlusVieille)
-                        {
-                            datePlusVieille = articles.DateCreation;
-                        }
-                        var item = _context.PPProduits.FirstOrDefault(p => p.NoProduit == articles.NoProduit);
-                        <div class="card mb-1">
-                            <div class="card-body row d-flex ">
-                                <b>@Html.DisplayFor(modelItem => item.Nom) </b>
-                                @{
-                                    var path = System.IO.Path.Combine(env.WebRootPath, "Logo", item.Photo);
-                                    string imagePath = item.Photo != null && File.Exists(path) ? $"~/Logo/{item.Photo}" : "~/Logo/DefaultImage.png";
-                                    Console.WriteLine("FILE Name : " + item.Photo);
-                                    Console.WriteLine("FILE : " + File.Exists(path));
-                                }
-                                <div class="col-12 col-md-2 d-flex align-items-center justify-content-center">
-                                    <img src="@Url.Content(imagePath)" alt="@item.Photo" width="100" height="120" />
-                                </div>
-                                <div class="col-12 col-md-2 d-flex align-items-center justify-content-center">
-                                    <form asp-route-id="@articles.NoPanier" asp-route-delete="false" asp-route-vendeur="@articles.NoVendeur" asp-action="Index">
-                                        <input type="number" name="nb" value="@articles.NbItems" onchange="this.form.submit()" min="1" max="@articles.PPProduits.NombreItems" />
-                                    </form>
-                                </div>
-                                @if (item.PrixVente != null)
-                                {
-                                    var prix = item.PrixVente * articles.NbItems;
-                                    <div class="col-12 col-md-3 d-flex align-items-center justify-content-center">
-                                        <b>Prix Total: @Html.DisplayFor(modelItem => prix) $ </b>
+                                                <input id="form1" min="0" name="quantity" value="1" type="number"
+                                                       class="form-control form-control-sm" />
+
+                                                <button class="btn btn-link px-2"
+                                                        onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
+                                                    <i class="fas fa-plus"></i>
+                                                </button>
+                                            </div>
+                                            <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
+                                                <h6 class="mb-0">€ 44.00</h6>
+                                            </div>
+                                            <div class="col-md-1 col-lg-1 col-xl-1 text-end">
+                                                <a href="#!" class="text-muted"><i class="fas fa-times"></i></a>
+                                            </div>
+                                        </div>
+
+                                        <hr class="my-4">
+
+                                        <div class="pt-5">
+                                            <h6 class="mb-0">
+                                                <a class="nav-link text-body" asp-area="" asp-controller="Paniers" asp-action="Index">
+                                                    <i class="fas fa-long-arrow-alt-left me-2"></i>Retour à la liste des paniers
+                                                </a>
+                                            </h6>
+                                        </div>
                                     </div>
-                                }
-                                else
-                                {
-                                    var prix = item.PrixDemande * articles.NbItems;
-                                    <div class="col-12 col-md-3 d-flex align-items-center justify-content-center">
-                                        <b>Prix Total: @Html.DisplayFor(modelItem => prix) $ </b>
-                                    </div>
-                                }
-                                @{
-                                    var poids = item.Poids * articles.NbItems;
-                                }
-                                <div class="col-12 col-md-3 d-flex align-items-center justify-content-center">
-                                    <b>Poids Total: @Html.DisplayFor(modelItem => poids) Kg </b>
                                 </div>
+                                <div class="col-lg-4 bg-grey">
+                                    <div class="p-5">
+                                        <h3 class="fw-bold mb-5 mt-2 pt-1">Summary</h3>
+                                        <hr class="my-4">
 
-                                <div class="col-12 col-md-2 d-flex align-items-center justify-content-center">
-                                    <form asp-route-id="@articles.NoPanier" asp-route-delete="true" asp-route-vendeur="@articles.NoVendeur" asp-action="Index">
-                                        <button type="submit" class="btn btn-danger">Retirer</button>
-                                    </form>
+                                        <div class="d-flex justify-content-between mb-4">
+                                            <h5 class="text-uppercase">items 3</h5>
+                                            <h5>€ 132.00</h5>
+                                        </div>
+
+                                        <h5 class="text-uppercase mb-3">Shipping</h5>
+
+                                        <div class="mb-4 pb-2">
+                                            <select class="select">
+                                                <option value="1">Standard-Delivery- €5.00</option>
+                                                <option value="2">Two</option>
+                                                <option value="3">Three</option>
+                                                <option value="4">Four</option>
+                                            </select>
+                                        </div>
+
+                                        <h5 class="text-uppercase mb-3">Give code</h5>
+
+                                        <div class="mb-5">
+                                            <div class="form-outline">
+                                                <input type="text" id="form3Examplea2" class="form-control form-control-lg" />
+                                                <label class="form-label" for="form3Examplea2">Enter your code</label>
+                                            </div>
+                                        </div>
+
+                                        <hr class="my-4">
+
+                                        <div class="d-flex justify-content-between mb-5">
+                                            <h5 class="text-uppercase">Total price</h5>
+                                            <h5>€ 137.00</h5>
+                                        </div>
+
+                                        <button type="button" class="btn btn-dark btn-block btn-lg"
+                                                data-mdb-ripple-color="dark">
+                                            Register
+                                        </button>
+
+                                    </div>
                                 </div>
                             </div>
                         </div>
-
-                    }
-
-                </div>
-            </div>
-            <div class="col-md-6 d-flex">
-                <div class="d-flex flex-column align-items-start bg-light overflow-auto" style="margin-bottom:50px;  height:600px;">
-                    @{
-                        decimal? totalPrice = 0;
-                        decimal? totalPoids = 0;
-                        var nbTotal = 0;
-                        foreach (PPArticlesEnPanier article in ViewBag.Panier)
-                        {
-                            nbTotal += article.NbItems;
-                            var item = _context.PPProduits.FirstOrDefault(p => p.NoProduit == article.NoProduit);
-                            if (item != null)
-                            {
-                                totalPrice += item.PrixVente * article.NbItems;
-                            }
-                            else
-                            {
-                                totalPrice += item.PrixDemande * article.NbItems;
-                            }
-                            totalPoids += item.Poids * article.NbItems;
-                        }
-                    }
-                    <h4 style="margin:5px;">Information sure le panier</h4>
-                    <b style="margin:5px;">Prix Total : @Html.DisplayFor(modelItem => totalPrice) $</b>
-                    <b style="margin:5px;">Poids Total : @Html.DisplayFor(modelItem => totalPoids) Kg</b>
-                    <b style="margin:5px;">Date Création : @Html.DisplayFor(modelItem => datePlusVieille) </b>
-                    <b style="margin:5px;">Nombre d'Items Total : @Html.DisplayFor(modelItem => nbTotal) </b>
-
-                    @if (client != null)
-                    {
-
-                        bool displayDestination = client.Pays != null || client.Province != null || client.Ville != null || client.Rue != null || client.CodePostal != null;
-
-
-                        @if (displayDestination)
-                        {
-                            <h4 style="margin:5px;">Destination</h4>
-
-                            @if (client.Pays != null)
-                            {
-                                <b style="margin:5px;">Pays : @Html.DisplayFor(modelItem => client.Pays) </b>
-                            }
-                            @if (client.Province != null)
-                            {
-                                <b style="margin:5px;">Province : @Html.DisplayFor(modelItem => client.Province) </b>
-                            }
-                            @if (client.Ville != null)
-                            {
-                                <b style="margin:5px;">Ville : @Html.DisplayFor(modelItem => client.Ville)</b>
-                            }
-                            @if (client.Rue != null)
-                            {
-                                <b style="margin:5px;">Rue : @Html.DisplayFor(modelItem => client.Rue) </b>
-                            }
-                            @if (client.CodePostal != null)
-                            {
-                                <b style="margin:5px;">Code Postal : @Html.DisplayFor(modelItem => client.CodePostal) </b>
-                            }
-                        }
-                    }
-
-
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
-    <a class="nav-link" asp-area="" asp-controller="Paniers" asp-action="Index">Retour à la liste des paniers</a>
+    
     }
 
+        <style>
+        @@media (min-width: 1025px) {
+        .h-custom {
+        height: 100vh !important;
+        }
+        }
 
+        .card-registration .select-input.form-control[readonly]:not([disabled]) {
+        font-size: 1rem;
+        line-height: 2.15;
+        padding-left: .75em;
+        padding-right: .75em;
+        }
+
+        .card-registration .select-arrow {
+        top: 13px;
+        }
+
+        .bg-grey {
+        background-color: #eae8e8;
+        }
+
+        @@media (min-width: 992px) {
+        .card-registration-2 .bg-grey {
+        border-top-right-radius: 16px;
+        border-bottom-right-radius: 16px;
+        }
+        }
+
+        @@media (max-width: 991px) {
+        .card-registration-2 .bg-grey {
+        border-bottom-left-radius: 16px;
+        border-bottom-right-radius: 16px;
+        }
+        }
+
+</style>
